# instance-map

./: .gitignore  LICENSE  README.md  flake.nix  instance-map.cabal  stack.yaml
src/Type/: InstanceMap.hs
src/Type/InstanceMap/: TH.hs
test/: BasicSpec.hs  MultiArgTypeSpec.hs  RecursiveSpec.hs  Spec.hs
