name:                instance-map
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/RichardWarfield/instance-map#readme
license:             BSD3
license-file:        LICENSE
author:              Richard Warfield
maintainer:          richard@litx.io
copyright:           2018 Richard Warfield
category:            Dependent Types
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Type.InstanceMap Type.InstanceMap.TH
  build-depends:       base >= 4.7 && < 5
                     , containers 
                     , mtl
                     , template-haskell
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/RichardWarfield/instance-map


test-suite instance-map-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , instance-map
                     , bytestring
                     , containers 
                     , mtl
                     , template-haskell
                     , hspec
                     , binary
                     , aeson
  ghc-options:         -j3 -rtsopts -O0  -dynamic
  default-language:    Haskell2010
